--- a/DouYu/app/src/main/res/layout/layout_tab_pager.xml
+++ b/DouYu/app/src/main/res/layout/layout_tab_pager.xml
@@ -14,6 +14,8 @@
         app:tabMode="scrollable"
         />
 
+    <include layout="@layout/layout_divider1"/>
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
