--- a/DouYu/app/src/main/res/layout/item_home_cate_item.xml
+++ b/DouYu/app/src/main/res/layout/item_home_cate_item.xml
@@ -5,8 +5,6 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_marginLeft="@dimen/margin_5"
-              android:layout_marginRight="@dimen/margin_5"
               android:orientation="vertical">
 
     <android.support.v7.widget.CardView
@@ -40,7 +38,7 @@
                     android:layout_height="@dimen/d36"
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
-                    android:layout_marginRight="@dimen/d15"
+                    android:layout_marginRight="@dimen/d18"
                     android:background="@drawable/gray_h"
                     android:drawableLeft="@drawable/home_reco_online_num_icon"
                     android:drawablePadding="@dimen/d10"
@@ -83,6 +81,8 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:paddingTop="10dp"
+        android:textColor="@color/c333333"
+        android:textSize="@dimen/d35"
         tools:text="乾隆:什么！我大清亡了！"/>
 
 
