--- a/DouYu/app/src/main/res/layout/item_tabhost.xml
+++ b/DouYu/app/src/main/res/layout/item_tabhost.xml
@@ -7,7 +7,7 @@
 
 
     <ImageView
-        android:id="@+id/iv_tabhost_item"
+        android:id="@+id/tab_icon"
         android:layout_width="wrap_content"
         android:layout_height="24dp"
         android:layout_centerHorizontal="true"
@@ -16,7 +16,7 @@
 
 
     <TextView
-        android:id="@+id/tv_tabhost_item"
+        android:id="@+id/tab_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
