--- a/DouYu/app/src/main/res/layout/multiple_loading.xml
+++ b/DouYu/app/src/main/res/layout/multiple_loading.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/loading_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+                android:id="@+id/loading_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
     >
-    <ProgressBar
-        android:id="@+id/retry_view"
-        style="@android:style/Widget.ProgressBar.Small"
+
+
+    <ImageView
+        android:id="@+id/iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:src="@drawable/anim_refresh"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/iv"
+        android:layout_centerHorizontal="true"
+        android:text="正在加载中"
         />
 </RelativeLayout>
