--- a/DouYu/app/src/main/res/values/styles.xml
+++ b/DouYu/app/src/main/res/values/styles.xml
@@ -50,4 +50,11 @@
         <attr name="textColorRight" format="color"/>
     </declare-styleable>
 
+    <declare-styleable name="NavigateTabBar">
+        <attr name="navigateTabTextColor" format="color|reference"/>
+        <attr name="navigateTabSelectedTextColor" format="color|reference"/>
+        <attr name="containerId" format="integer|reference"/>
+        <attr name="navigateTabTextSize" format="dimension|reference"/>
+    </declare-styleable>
+
 </resources>
