--- a/DouYu/app/src/main/res/layout/fragment_user.xml
+++ b/DouYu/app/src/main/res/layout/fragment_user.xml
@@ -76,7 +76,7 @@
 
         <include layout="@layout/layout_divider30"/>
 
-        <com.app.douyu.view.TextImageView
+        <com.app.mylibrary.view.TextImageView
             style="@style/UserTextStyle"
             android:drawableLeft="@drawable/icon_my_video"
             android:text="@string/user_fans"
@@ -85,7 +85,7 @@
 
         <include layout="@layout/layout_divider30"/>
 
-        <com.app.douyu.view.TextImageView
+        <com.app.mylibrary.view.TextImageView
             style="@style/UserTextStyle"
             android:drawableLeft="@drawable/icon_my_video"
             android:text="@string/user_fans"
@@ -94,7 +94,7 @@
 
         <include layout="@layout/layout_divider1lr"/>
 
-        <com.app.douyu.view.TextImageView
+        <com.app.mylibrary.view.TextImageView
             style="@style/UserTextStyle"
             android:drawableLeft="@drawable/icon_my_video"
             android:text="开黑语音"
@@ -103,7 +103,7 @@
 
         <include layout="@layout/layout_divider1lr"/>
 
-        <com.app.douyu.view.TextImageView
+        <com.app.mylibrary.view.TextImageView
             style="@style/UserTextStyle"
             android:drawableLeft="@drawable/image_game"
             android:text="游戏中心"
@@ -114,7 +114,7 @@
         <include layout="@layout/layout_divider30"/>
 
 
-        <com.app.douyu.view.TextImageView
+        <com.app.mylibrary.view.TextImageView
             style="@style/UserTextStyle"
             android:drawableLeft="@drawable/icon_anchor_recruit"
             android:text="主播招募"
@@ -123,7 +123,7 @@
 
         <include layout="@layout/layout_divider1lr"/>
 
-        <com.app.douyu.view.TextImageView
+        <com.app.mylibrary.view.TextImageView
             style="@style/UserTextStyle"
             android:drawableLeft="@drawable/image_game"
             android:text="排行榜"
@@ -133,7 +133,7 @@
         <include layout="@layout/layout_divider30"/>
 
 
-        <com.app.douyu.view.TextImageView
+        <com.app.mylibrary.view.TextImageView
             style="@style/UserTextStyle"
             android:drawableLeft="@drawable/icon_my_video"
             android:text="我的视频"
@@ -143,7 +143,7 @@
         <include layout="@layout/layout_divider1lr"/>
 
 
-        <com.app.douyu.view.TextImageView
+        <com.app.mylibrary.view.TextImageView
             style="@style/UserTextStyle"
             android:drawableLeft="@drawable/icon_video_collection"
             android:text="视频收藏"
@@ -152,7 +152,7 @@
 
         <include layout="@layout/layout_divider30"/>
 
-        <com.app.douyu.view.TextImageView
+        <com.app.mylibrary.view.TextImageView
             style="@style/UserTextStyle"
             android:drawableLeft="@drawable/icon_video_collection"
             android:text="我的账户"
@@ -161,7 +161,7 @@
 
         <include layout="@layout/layout_divider30"/>
 
-        <com.app.douyu.view.TextImageView
+        <com.app.mylibrary.view.TextImageView
             style="@style/UserTextStyle"
             android:drawableLeft="@drawable/clock"
             android:text="开播提醒"
