--- a/DouYu/app/src/main/res/layout/item_home_cate_item_face.xml
+++ b/DouYu/app/src/main/res/layout/item_home_cate_item_face.xml
@@ -26,7 +26,7 @@
                 tools:src="@drawable/ic_launcher"/>
 
 
-            <com.app.douyu.view.TextImageView
+            <com.app.mylibrary.view.TextImageView
                 android:id="@+id/tv_count"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/d60"
@@ -55,7 +55,7 @@
         android:layout_marginTop="@dimen/d24"
         >
 
-        <com.app.douyu.view.TextImageView
+        <com.app.mylibrary.view.TextImageView
             android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="@dimen/d50"
@@ -73,7 +73,7 @@
             />
 
 
-        <com.app.douyu.view.TextImageView
+        <com.app.mylibrary.view.TextImageView
             android:id="@+id/tv_city"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/d50"
