--- a/DouYu/app/src/main/res/layout/layout_base_fragment.xml
+++ b/DouYu/app/src/main/res/layout/layout_base_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     >
 
-    <com.app.douyu.view.MultipleStatusView
+    <com.app.mylibrary.view.MultipleStatusView
         android:id="@+id/multipleStatusView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
